<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>it.foodmood</groupId>
  <artifactId>foodmood</artifactId>
  <version>1.0.0</version>
  <name>FoodMood</name>

  <properties>
    <maven.compiler.release>23</maven.compiler.release>
    <javafx.version>23.0.1</javafx.version>
    <app.name>FoodMood</app.name>
    <main.class>it.foodmood.Main</main.class>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- Sonar-->
    <sonar.organization>foodmood</sonar.organization>
    <sonar.projectKey>gabriele-monti_Progetto-ISPW</sonar.projectKey>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.exclusions>src/main/resources/**/*.css</sonar.exclusions>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>9.2.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.16</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>2.0.16</version>
      <scope>runtime</scope>
    </dependency>

  </dependencies>

  <build>
    <finalName>foodmood</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <mainClass>${main.class}</mainClass>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <useModulePath>false</useModulePath>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>${main.class}</mainClass>
          <launcher>${app.name}</launcher>
        </configuration>
        <executions>
          <execution>
            <id>create-app-image</id>
            <phase>package</phase>
            <goals>
              <goal>jlink</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>3.11.0.3922</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
          <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>jpackage-dmg</id>
                <phase>package</phase>
                <goals><goal>exec</goal></goals>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument><argument>dmg</argument>
                    <argument>--name</argument><argument>${app.name}</argument>
                    <argument>--app-version</argument><argument>${project.version}</argument>
                    <argument>--runtime-image</argument><argument>${project.build.directory}/image</argument>
                    <argument>--module</argument><argument>it.foodmood/it.foodmood.Main</argument>
                    <argument>--icon</argument>
                    <argument>${project.basedir}/src/main/resources/icons/foodmood.icns</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>win</id>
      <activation>
        <os><family>windows</family></os>
      </activation>
      <build>
        <plugins>
          <plugin>
          <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>jpackage-msi</id>
                <phase>package</phase>
                <goals><goal>exec</goal></goals>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument><argument>msi</argument>
                    <argument>--name</argument><argument>${app.name}</argument>
                    <argument>--app-version</argument><argument>${project.version}</argument>
                    <argument>--runtime-image</argument><argument>${project.build.directory}/image</argument>
                    <argument>--module</argument><argument>it.foodmood/it.foodmood.Main</argument>
                    <argument>--icon</argument><argument>src\main\resources\icons\foodmood.ico</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>Linux</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
          <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>jpackage-deb</id>
                <phase>package</phase>
                <goals><goal>exec</goal></goals>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument><argument>deb</argument>
                    <argument>--name</argument><argument>${app.name}</argument>
                    <argument>--app-version</argument><argument>${project.version}</argument>
                    <argument>--runtime-image</argument>
                    <argument>${project.build.directory}/image</argument>
                    <argument>--module</argument><argument>it.foodmood/it.foodmood.Main</argument>
                    <argument>--icon</argument><argument>src/main/resources/icons/foodmood.png</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>